# extract_gmail_attachment

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
modules/: __main__.py  _google.py  _path.py
modules/abc/: process.py
modules/google/: README.md  process.py
modules/google_old/: process.py
tests/: test_extract.py
